--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,14 @@ phases:
   install:
     runtime-versions:
       python: 3.8
-  build:
     commands:
-      - echo "hai BCBSA" 
-      - aws cloudformation validate-template --template-body file://s3-kms.yaml
+      - curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+      - unzip awscliv2.zip
+      - sudo ./aws/install
+  pre_build:
+    commands:
+      - aws --version  # Verify AWS CLI installation
+  # build:
+  #   commands:
+  #     - aws cloudformation validate-template --template-body file://s3-template.yaml
+
