--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,7 @@ phases:
   pre_build:
     commands:
       - aws --version  # Verify AWS CLI installation
-  # build:
-  #   commands:
-  #     - aws cloudformation validate-template --template-body file://s3-template.yaml
+  build:
+    commands:
+      - aws cloudformation validate-template --template-body file://s3-template.yaml
 
