--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,5 +13,5 @@ phases:
       - aws --version  # Verify AWS CLI installation
   build:
     commands:
-      - aws cloudformation validate-template --template-body file://s3-template.yaml
+      - aws cloudformation validate-template --template-body file://s3-kms.yml
 
