--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,8 +2,8 @@ version: 0.2
 
 phases:
   install:
-    runtime-versions:
-      python: 3.8
+    # runtime-versions:
+    #   python: 3.8
     commands:
       - curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
       - unzip awscliv2.zip
