--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,6 +13,6 @@ phases:
       - aws --version  
   build:
     commands:
-      - aws cloudformation validate-template --template-body file://s3-kms.yml
+      - aws cloudformation validate-template --template-body file://s3-param.yml
 
 
