--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,5 +14,6 @@ phases:
   build:
     commands:
       - aws cloudformation validate-template --template-body file://s3-param.yml
+      - echo "validation completed"
 
 
