--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,5 +13,8 @@ phases:
     commands:
       - aws cloudformation validate-template --template-body file://s3-kms.yml
       - echo "validation completed"
+artifacts:
+  files:
+    - target/buildartifact
 
 
