--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,6 +13,9 @@ phases:
     commands:
       - aws cloudformation validate-template --template-body file://s3-kms.yml
       - echo "validation completed"
+artifacts:
+  files:
+    - s3-kms.yml
 
 
 
